--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Self-driving car - No libraries</title>
+    <title>Auto-driving car </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
